fix: tests #1845